[package]
name = "knossos"
version = "1.2.0"
authors = ["unrenamed <renkonazbka@gmail.com>"]
description = "Rust library for generating and rendering mazes"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/unrenamed/knossos"
repository = "https://github.com/unrenamed/knossos"
keywords = ["maze", "labyrinth", "procedural", "algorithm"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
image = "0.25"
clap = { version = "4.5.27", features = ["derive"] }
bitflags = "2.8"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[lints.clippy]
use_self = { level = "allow" }
missing_const_for_fn = { level = "warn" }

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "formatters"
harness = false
